--- a/index.html
+++ b/index.html
@@ -25,5 +25,23 @@
             <h1 class="logo">MERN</h1>
         </div>
     </nav>
+    <section class="tagline" id="tagline">
+        <div class="tagline-container">
+            <h1 class="main-title" id="home">BE HEALTHY, BE WEALTHY</h1>
+            <p>Experience autheticity with our food.</p>
+        </div>
+    </section>
+    <section id="about">
+        <div class="about-inside container">
+            <div class="about-text">
+                <p class="small">About Us</p>
+                <h2>This is a project</h2>
+                <p>
+                    We have been making authentic and healthy food for people. Food with enriched flavours unlike American food.
+                    Authentic Indian food with varying spice levels, but at the same time healthy food is made available here.
+                </p>
+            </div>
+        </div>
+    </section>
     </body>
 </html>
