Added a "Food Menu" section

--- a/index.html
+++ b/index.html
@@ -43,5 +43,47 @@
             </div>
         </div>
     </section>
+    <section id="food-menu">
+        <h2 class="food-menu-heading">Food Menu</h2>
+        <div class="food-menu-container container">
+            <div class="food-menu-item">
+                <div class="food-img">
+                    <img src="assets/pictures/curd.jpg" alt="" />
+                </div>
+                <div class="food-description">
+                    <h2 class="food-titile">Curd Rice</h2>
+                    <p>
+                        Rice with curd.
+                    </p>
+                    <p class="food-price">Price:Rs.100 </p>
+                </div>
+            </div>
+
+            <div class="food-menu-item">
+                <div class="food-img">
+                    <img src="assets/pictures/friedrice.jpg" alt="" />
+                </div>
+                <div class="food-description">
+                    <h2 class="food-titile">Fried rice</h2>
+                    <p>
+                        Rice with vegetables and MSG.
+                    </p>
+                    <p class="food-price">Price:Rs.120 </p>
+                </div>
+            </div>
+            <div class="food-menu-item">
+                <div class="food-img">
+                    <img src="assets/pictures/puli.jpg" alt="" />
+                </div>
+                <div class="food-description">
+                    <h2 class="food-titile">Puli Rice</h2>
+                    <p>
+                        Rice with tamarind.
+                    </p>
+                    <p class="food-price">Price:Rs.100 </p>
+                </div>
+            </div>
+        </div>
+    </section>
     </body>
 </html>
