Final Commit. Added contact me part.

--- a/index.html
+++ b/index.html
@@ -85,5 +85,24 @@
             </div>
         </div>
     </section>
+    <section id="contact">
+        <div class="contact-container container">
+            <div class="contact-img">
+                <img src="assets/pictures/food-bg.jpg" alt="" />
+            </div>
+            <div class="contact-details">
+                <div class = "details-bg">
+                <h2>Contact Us</h2>
+                 <h3>SAVEETHA ENGINEERING COLLEGE </h3> 
+                 <p> Saveetha Nagar, Thandalam,Chennai.</p>
+                 <p>Call: +91-44-66726677</p>
+                 <br>
+                 <br>
+                 <p> Please contact through www.saveetha.ac.in</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     </body>
 </html>
